fix: improved performance on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -67,34 +67,6 @@
   #root {
     @apply flex h-full w-full flex-col;
   }
-
-  .github-corner:hover .octo-arm {
-    animation: octocat-wave 560ms ease-in-out;
-  }
-
-  @keyframes octocat-wave {
-    0%,
-    100% {
-      transform: rotate(0);
-    }
-    20%,
-    60% {
-      transform: rotate(-25deg);
-    }
-    40%,
-    80% {
-      transform: rotate(10deg);
-    }
-  }
-
-  @media (max-width: 500px) {
-    .github-corner:hover .octo-arm {
-      animation: none;
-    }
-    .github-corner .octo-arm {
-      animation: octocat-wave 560ms ease-in-out;
-    }
-  }
 }
 
 /* ==== fancy purple blobs ==== */
@@ -107,7 +79,7 @@
     content: '';
     position: absolute;
     border-radius: 50%;
-    filter: blur(100px);
+    /*filter: blur(100px);*/
     opacity: 0.35;
     mix-blend-mode: screen;
     pointer-events: none;
